<resources>
    <string name="app_name">Tutor_Center_Management</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_see_all_text">See all</string>
    <string name="app_status_title_filter">Status:</string>
    <string name="bottom_navigation_home_title">Home</string>
    <string name="bottom_navigation_classes_title">Classes</string>
    <string name="bottom_navigation_tutor_title">Tutors</string>
    <string name="bottom_navigation_courses_title">My Classes</string>
    <string name="bottom_navigation_revenue_title">Statistics</string>
    <string name="bottom_navigation_profile_title">Profile</string>
    <string name="auth_screen_title">Find your best tutor here</string>
    <string name="auth_screen_description">You can get best tutor and tuition from \nthis app. It will be the best way to find a \nperfect tutor in your area</string>
    <string name="auth_screen_join_as_text">Join As</string>
    <string name="auth_screen_login_text">Already have an account? Log in</string>
    <string name="auth_screen_login_text_clickable_text">Log in</string>
    <string name="auth_screen_button_text_student">Student</string>
    <string name="auth_screen_button_text_tutor">Tutor</string>
    <string name="login_screen_title">Sign In</string>
    <string name="login_screen_title_text">Welcome back!</string>
    <string name="login_screen_sub_title">Sign in to your account</string>
    <string name="login_screen_edt_hint_1">Username</string>
    <string name="login_screen_edt_hint_2">Password</string>
    <string name="login_screen_button_text">Sign In</string>
    <string name="login_screen_sign_up_text">Don\'t have an account? Sign Up</string>
    <string name="login_screen_sign_up_text_clickable_text">Sign Up</string>
    <string name="login_screen_empty_fields">Please fill in both fields</string>
    <string name="login_screen_sign_in_success">Sign in successful</string>
    <string name="login_screen_wrong_info">Invalid credentials</string>
    <string name="login_screen_sign_in_failed">Sign in failed: %s</string>
    <string name="sign_up_screen_title">Sign Up</string>
    <string name="sign_up_screen_title_text">Welcome!</string>
    <string name="sign_up_screen_sub_title">Create a new account</string>
    <string name="sign_up_screen_edt_hint_1">Username</string>
    <string name="sign_up_screen_edt_hint_2">Password</string>
    <string name="sign_up_screen_edt_hint_3">Re-enter password</string>
    <string name="sign_up_screen_button_text">Continue</string>
    <string name="sign_up_screen_login_text">Already have an account? Sign In</string>
    <string name="sign_up_screen_login_text_clickable_text">Sign In</string>
    <string name="sign_up_screen_username_error">Username already exists</string>
    <string name="sign_up_screen_re_enter_password_error">Your re-entered password does not match</string>
    <string name="sign_up_empty_fields">Please fill in all fields</string>
    <string name="sign_up_screen_successful">Sign up successful!</string>
    <string name="detail_screen_title">Set Details</string>
    <string name="detail_screen_title_text">Thanks for sign up!</string>
    <string name="detail_screen_sub_title">Please set your full details</string>
    <string name="detail_screen_edt_hint_1">First Name</string>
    <string name="detail_screen_edt_hint_2">Last Name</string>
    <string name="detail_screen_edt_hint_3">Date of Birth</string>
    <string name="detail_screen_edt_hint_4">Gender</string>
    <string name="detail_screen_edt_hint_5">Contact Number</string>
    <string name="detail_screen_edt_hint_6">Email</string>
    <string name="detail_screen_edt_hint_7">Portrait Photos</string>
    <string name="detail_screen_edt_hint_8">Address</string>
    <string name="detail_screen_edt_hint_9">Qualification</string>
    <string name="detail_screen_edt_hint_10">Experience</string>
    <string name="detail_screen_edt_hint_11">Graduation Year</string>
    <string name="detail_screen_edt_hint_12">Teaching Time</string>
    <string name="detail_screen_edt_hint_13">Citizen Id</string>
    <string name="detail_screen_button_text">Submit</string>
    <string name="detail_screen_button_text_2">Send</string>
    <string name="detail_screen_gender_1">Male</string>
    <string name="detail_screen_gender_2">Female</string>
    <string name="detail_screen_gender_3">Other</string>
    <string name="detail_screen_teaching_time_monday_1">Morning Monday</string>
    <string name="detail_screen_teaching_time_monday_2">Afternoon Monday</string>
    <string name="detail_screen_teaching_time_monday_3">Evening Monday</string>
    <string name="detail_screen_teaching_time_tuesday_1">Morning Tuesday</string>
    <string name="detail_screen_teaching_time_tuesday_2">Afternoon Tuesday</string>
    <string name="detail_screen_teaching_time_tuesday_3">Evening Tuesday</string>
    <string name="detail_screen_teaching_time_wednesday_1">Morning Wednesday</string>
    <string name="detail_screen_teaching_time_wednesday_2">Afternoon Wednesday</string>
    <string name="detail_screen_teaching_time_wednesday_3">Evening Wednesday</string>
    <string name="detail_screen_teaching_time_thursday_1">Morning Thursday</string>
    <string name="detail_screen_teaching_time_thursday_2">Afternoon Thursday</string>
    <string name="detail_screen_teaching_time_thursday_3">Evening Thursday</string>
    <string name="detail_screen_teaching_time_friday_1">Morning Friday</string>
    <string name="detail_screen_teaching_time_friday_2">Afternoon Friday</string>
    <string name="detail_screen_teaching_time_friday_3">Evening Friday</string>
    <string name="detail_screen_teaching_time_saturday_1">Morning Saturday</string>
    <string name="detail_screen_teaching_time_saturday_2">Afternoon Saturday</string>
    <string name="detail_screen_teaching_time_saturday_3">Evening Saturday</string>
    <string name="detail_screen_teaching_time_sunday_1">Morning Sunday</string>
    <string name="detail_screen_teaching_time_sunday_2">Afternoon Sunday</string>
    <string name="detail_screen_teaching_time_sunday_3">Evening Sunday</string>
    <string name="home_screen_name">Hello, %s!</string>
    <string name="home_screen_welcome">Welcome to Wardiere Education</string>
    <string name="home_screen_welcome_admin">Welcome to Wardiere Administration</string>
    <string name="home_screen_edt_hint_1">Search</string>
    <string name="home_screen_title_1">Popular Teachers</string>
    <string name="home_screen_title_2">Classes</string>
    <string name="exit_dialog_title">Exit Application</string>
    <string name="exit_dialog_message">Are you sure you want to exit the application?</string>
    <string name="exit_dialog_confirm_button">Yes</string>
    <string name="exit_dialog_cancel_button">No</string>
    <string name="teacher_item_button">Hire</string>
    <string name="teacher_item_status">#Status:# %s</string>
    <string name="teacher_item_name">#Name:# %s</string>
    <string name="teacher_item_birth">#Date of Birth:# %s</string>
    <string name="teacher_item_gender">#Gender:# %s</string>
    <string name="teacher_item_address">#Address:# %s</string>
    <string name="detail_tutor_screen_tutor_id">Tutor ID: %s</string>
    <string name="detail_tutor_screen_name">Name: %s</string>
    <string name="detail_tutor_screen_gender">Gender: %s</string>
    <string name="detail_tutor_screen_contact">Contact number: %s</string>
    <string name="detail_tutor_screen_email">Email: %s</string>
    <string name="detail_tutor_screen_address">Address: %s</string>
    <string name="detail_tutor_screen_cid">Citizen ID: %s</string>
    <string name="detail_tutor_screen_subjects">Subjects: %s</string>
    <string name="detail_tutor_screen_teaching_time">Teaching time: %s</string>
    <string name="detail_tutor_screen_graduation_year">Graduation year: %s</string>
    <string name="detail_tutor_screen_date_of_birth">Date of Birth: %s</string>
    <string name="detail_class_id">Class ID: %s</string>
    <string name="detail_class_screen_name">Tutor name: %s</string>
    <string name="detail_class_screen_student_name">Student name: %s</string>
    <string name="detail_class_screen_student_info">Student info: %s</string>
    <string name="detail_class_screen_schedule">Schedule: %s</string>
    <string name="detail_class_screen_salary">Salary: %s</string>
    <string name="detail_class_screen_form">Form: %s</string>
    <string name="detail_class_screen_address">Address: %s</string>
    <string name="detail_class_screen_subjects">Subjects: %s</string>
    <string name="detail_class_screen_requirement">Requirement: %s</string>
    <string name="hire_tutor_screen_title">Hire tutor</string>
    <string name="hire_tutor_screen_edt_hint_1">Student info</string>
    <string name="hire_tutor_screen_edt_hint_2">Salary</string>
    <string name="hire_tutor_screen_edt_hint_3">Form: %s</string>
    <string name="hire_tutor_screen_edt_hint_4">Address</string>
    <string name="hire_tutor_screen_edt_hint_5">Subject: %s</string>
    <string name="hire_tutor_screen_edt_hint_5_default">Subject</string>
    <string name="hire_tutor_screen_edt_hint_6">Requirement</string>
    <string name="hire_tutor_screen_edt_hint_7">Schedule</string>
    <string name="payment_screen_title">Payment</string>
    <string name="payment_screen_status">#Status:# %s</string>
    <string name="payment_screen_class_id">#Class id:# %s</string>
    <string name="payment_screen_subject">#Subject:# %s</string>
    <string name="payment_screen_schedule">#Schedule:# %s</string>
    <string name="payment_screen_form">#Form:# %s</string>
    <string name="payment_screen_address">#Address:# %s</string>
    <string name="payment_screen_salary">#Salary:# %s</string>
    <string name="payment_screen_fee_percent">#Fee percent:# %s</string>
    <string name="payment_screen_amount">#Amount:# %s</string>
    <string name="payment_screen_button_pay">Pay</string>
    <string name="revenue_total">#Total Revenue:# %s</string>
    <string name="classes_screen_status">#Status:# %s</string>
    <string name="classes_screen_class_id">#Class ID:# %s</string>
    <string name="classes_screen_student_info">#Student info:# %s</string>
    <string name="classes_screen_subject">#Subject:# %s</string>
    <string name="classes_screen_schedule">#Schedule:# %s</string>
    <string name="classes_screen_form">#Form:# %s</string>
    <string name="classes_screen_address">#Address:# %s</string>
    <string name="classes_screen_salary">#Salary:# %s</string>
    <string name="classes_screen_reason">#Reason:# %s</string>
    <string name="classes_screen_requirement">#Requirement:# %s</string>
    <string name="classes_screen_tutors">#Tutors:# %s</string>
    <string name="classes_screen_button_register">Register</string>
    <string name="classes_screen_button_change_status">Change Status</string>
    <string name="classes_screen_button_rejected">Reject</string>
    <string name="profile_screen_title">Profile</string>
    <string name="profile_screen_item_title_0">Tutor Information</string>
    <string name="profile_screen_item_title_1">Edit Profile</string>
    <string name="profile_screen_item_title_2">Teacher List</string>
    <string name="profile_screen_item_title_3">Help</string>
    <string name="profile_screen_item_title_4">Referral</string>
    <string name="profile_screen_item_title_5">Log out</string>
    <string name="profile_screen_id">ID: %s</string>
</resources>