<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/admin_navigation_classes"
        android:icon="@drawable/ic_class"
        android:title="@string/bottom_navigation_classes_title"/>

    <item
        android:id="@+id/admin_navigation_tutors"
        android:icon="@drawable/ic_hire_teacher"
        android:title="@string/bottom_navigation_tutor_title"/>

    <item
        android:id="@+id/admin_navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_navigation_home_title"/>

    <item
        android:id="@+id/admin_navigation_revenue"
        android:icon="@drawable/ic_revenue"
        android:title="@string/bottom_navigation_revenue_title"/>

    <item
        android:id="@+id/admin_navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/bottom_navigation_profile_title"/>

</menu>