<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="isPaid"
            type="Boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/app_padding_1"
        android:layout_margin="@dimen/app_margin_1"
        android:background="@drawable/background_card_item"
        android:elevation="@dimen/app_elevation">

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_screen_status"
            android:layout_marginBottom="@dimen/app_margin_bottom_2"
            android:layout_gravity="center"
            android:textSize="@dimen/app_fontsize_16"
            android:textStyle="bold"
            android:textColor="@color/app_text_heading_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/tvClassId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_margin_1"
            android:text="@string/payment_screen_class_id"
            android:textSize="@dimen/app_fontsize_14"
            android:textColor="@color/app_text_body_text_color"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tvSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_screen_subject"
            android:textSize="@dimen/app_fontsize_14"
            android:textColor="@color/app_text_body_text_color"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tvSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_screen_schedule"
            android:textSize="@dimen/app_fontsize_14"
            android:textColor="@color/app_text_body_text_color"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tvForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_screen_form"
            android:textSize="@dimen/app_fontsize_14"
            android:textColor="@color/app_text_body_text_color"/>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_screen_address"
            android:textSize="@dimen/app_fontsize_14"
            android:textColor="@color/app_text_body_text_color"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tvSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_screen_salary"
            android:textSize="@dimen/app_fontsize_14"
            android:textColor="@color/app_text_body_text_color"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tvFeePercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_screen_fee_percent"
            android:textSize="@dimen/app_fontsize_14"
            android:textColor="@color/app_text_body_text_color"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_screen_amount"
            android:textSize="@dimen/app_fontsize_14"
            android:textColor="@color/app_text_body_text_color"
            android:maxLines="2"
            android:ellipsize="end"/>

        <Button
            android:id="@+id/btnPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_margin_1"
            android:layout_gravity="center"
            android:visibility="@{isPaid ? View.GONE : View.VISIBLE}"
            android:text="@string/payment_screen_button_pay"/>
    </LinearLayout>
</layout>