<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="isAdmin"
            type="Boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_padding_1"
        android:layout_margin="@dimen/app_margin_1"
        android:background="@drawable/background_card_item"
        android:elevation="@dimen/app_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivTutorImage"
                android:layout_width="@dimen/app_avatar_size_3"
                android:layout_height="@dimen/app_avatar_size_3"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin_top_2"
                android:text="Class information"
                android:textSize="@dimen/app_fontsize_16"
                android:textStyle="bold"
                android:textColor="@color/app_text_heading_color"/>

            <TextView
                android:id="@+id/tvClassId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin_top_1"
                android:text="@string/detail_class_id"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvTutorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_class_screen_name"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvStudentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_class_screen_student_name"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvStudentInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_class_screen_student_info"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_class_screen_schedule"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvSalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_class_screen_salary"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_class_screen_form"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_class_screen_address"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_class_screen_subjects"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvRequirement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_class_screen_subjects"
                android:layout_marginBottom="@dimen/app_margin_bottom_3"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

        </LinearLayout>
    </ScrollView>
</layout>