<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="isAdmin"
            type="Boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_padding_1"
        android:layout_margin="@dimen/app_margin_1"
        android:background="@drawable/background_card_item"
        android:elevation="@dimen/app_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="@dimen/app_avatar_size_3"
                android:layout_height="@dimen/app_avatar_size_3"
                android:src="@drawable/ic_profile"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin_top_2"
                android:text="Information"
                android:textSize="@dimen/app_fontsize_16"
                android:textStyle="bold"
                android:textColor="@color/app_text_heading_color"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin_top_1"
                android:text="@string/detail_tutor_screen_name"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tutor_screen_gender"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvDateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tutor_screen_date_of_birth"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tutor_screen_contact"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tutor_screen_email"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tutor_screen_address"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvCid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{isAdmin ? View.VISIBLE : View.GONE}"
                android:text="@string/detail_tutor_screen_cid"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvTeachingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tutor_screen_teaching_time"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:id="@+id/tvGraduationYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tutor_screen_graduation_year"
                android:textSize="@dimen/app_fontsize_14"
                android:textColor="@color/app_text_body_text_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin_top_2"
                android:text="Qualification"
                android:textSize="@dimen/app_fontsize_16"
                android:textStyle="bold"
                android:textColor="@color/app_text_heading_color"/>

            <ImageView
                android:id="@+id/ivQualification"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/app_margin_top_1"/>
        </LinearLayout>
    </ScrollView>
</layout>